deploy/upstream/manifests/0.10.0/0000_50_olm_02-services.yaml
---
# Source: olm/templates/0000_50_olm_02-services.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: olm-admission
  namespace: olm
spec:
  ports:
    - name: admission
      port: 6789
      protocol: TCP
      targetPort: admission
  selector:
    app: olm-operator
