deploy/upstream/manifests/0.10.0/0000_50_olm_20-admission.yaml
---
# Source: olm/templates/0000_50_olm_20-admission.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: olm-admission
webhooks:
  - name: csv.operators.olm.com
    rules:
      - apiGroups:
          - "operators.olm.com"
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
        resources:
          - clusterserviceversions
        scope: "Namespaced"
    clientConfig:
      service:
        namespace: olm
        name: olm-admission
    admissionReviewVersions:
      - v1beta1
    timeoutSeconds: 1
